<?xml version="1.0"?>
<package format="2">
  <name>racecar_control</name>
  <version>0.1.0</version>
  <description>The racecar_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
<license>TODO</license>
<maintainer email="zhangnan@artrobot.com">Steven Zhang</maintainer>
  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- <author email="hypha.ros@gmail.com">ChanYuan KUO</author> -->
  <!-- <author email="hypha.ros@gmail.com">YoRu LU</author> -->
  <!-- <author email="hypha.ros@gmail.com">HaoChih LIN</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend> 
  <build_depend>sensor_msgs</build_depend>
  <build_depend>python-serial</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>


  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf</exec_depend> 
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python-serial</exec_depend>   
  <exec_depend>dynamic_reconfigure</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

